<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.tripplanner.ui.trip.details.TripDetailsEmptyItemViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewEmpty"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@android:drawable/ic_dialog_alert" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="Retry"
            android:textSize="20sp" />
    </LinearLayout>

</layout>