...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_departure_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                        android:gravity="center_vertical" />
...
